# jsn

./: .gitignore  LICENSE  README.md  jsn.cabal  stack.yaml
app/: Main.hs
src/: Jsn.hs
test/: Spec.hs
